Updates to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -162,7 +162,7 @@ ga('send', 'pageview');
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                <a target="_blank" href="https://www.christoc.com/">Another site from Christoc.com</a>
+                <a target="_blank" href="https://www.chrishammond.com/">Another site from Chris Hammond</a>
             </div>
         </div>
     </div>
