Updates for keywords

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,8 @@
 <meta name="keywords" content="{{ page.keywords }}">
 {% endif %}
 
+<link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html' }}">
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     
 <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">
