--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,16 +15,46 @@
 {% endif %}
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>
+    {% if paginator.page %}
+        {% if paginator.page > 1 %}
+            Page {{ paginator.page }} of {{ paginator.total_pages }} - 
+        {% endif %}
+    {% endif %}
+    {% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}
 
-<link rel="icon" href="{{ site.baseurl }}/assets/favicon.ico">
+</title>
+<link rel="icon" href="{{ site.baseurl }}{{ site.favicon }}">
 
-<title>{{ page.title }} | {{site.name}}</title>
-
-{% seo %}
-{% if page.keywords %}
-<meta name="keywords" content="{{ page.keywords }}">
+<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+<meta property="og:image" content="{{ site.url }}{% if page.image %}{% picture direct {{ page.image }} %}{% else %}{{ site.header-img }}{% endif %}" />
+{% if page.type %}
+<meta property="og:type" content="{{ page.type }}" />
+{% else %}    
+<meta property="og:type" content="article" />
 {% endif %}
+<meta property="og:title" content="{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}" />
+{% if page.description %}
+<meta property="og:description" content="{{ page.description }}" />
+<meta name="description" content="{{ page.description }}">
+{% else %}
+<meta property="og:description" content="{{ site.description }}" />
+<meta name="description" content="{{ site.description }}">
+{% endif %}       
 
+
+
+{% assign cacheBust = site.time | date:'?v=%s' %}
+
+<!-- Twitter Card data -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@{{ site.authors[page.author].twitterhandle }}">
+<meta name="twitter:title" content="{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}">
+<meta name="twitter:description" content="{{ page.description | default: site.description }}">
+<meta name="twitter:image" content="{{ site.url }}{% if page.image %}{% picture direct {{ page.image }} %}{% else %}{{ site.header-img }}{% endif %}">
+
+
+<meta name="keywords" content="{{ page.keywords }}">
 <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html' }}">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -34,8 +64,7 @@
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3356074518164779"
-     crossorigin="anonymous"></script>
+
 </head>
 
 
@@ -82,7 +111,6 @@
                 <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
                 </li>
 
-
                 {% include search-lunr.html %}
 
             </ul>
@@ -122,7 +150,7 @@
 ================================================== -->
 <div class="alertbar">
 	<div class="container text-center">
-		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
+		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}">  Never miss a <b>story</b> from us, subscribe to our newsletter</span>
         <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
             <div class="mc-field-group">
             <input type="email" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
