--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,6 @@
 <meta property="og:description" content="{{ site.description }}" />
 <meta name="description" content="{{ site.description }}">
 {% endif %}       
-
-
-
 {% assign cacheBust = site.time | date:'?v=%s' %}
 
 <!-- Twitter Card data -->
@@ -52,7 +49,6 @@
 <meta name="twitter:title" content="{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}">
 <meta name="twitter:description" content="{{ page.description | default: site.description }}">
 <meta name="twitter:image" content="{{ site.url }}{% if page.image %}{% picture direct {{ page.image }} %}{% else %}{{ site.header-img }}{% endif %}">
-
 
 <meta name="keywords" content="{{ page.keywords }}">
 <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html' }}">
@@ -141,9 +137,9 @@
 
 <!-- Content
 ================================================== -->
-<div class="main-content">
+<main class="main-content">
     {{ content }}
-</div>
+</main>
 
 {% if site.mailchimp-list %}
 <!-- Bottom Alert Bar
@@ -151,7 +147,7 @@
 <div class="alertbar">
 	<div class="container text-center">
 		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}">  Never miss a <b>story</b> from us, subscribe to our newsletter</span>
-        <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
+        <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate"  novalidate>
             <div class="mc-field-group">
             <input type="email" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
             <input type="submit" value="Subscribe" name="subscribe" class="heart">
@@ -173,14 +169,15 @@
             </div>
 		</div>
 		<div class="col-md-8 p-5 align-self-center text-center">
-            {% assign categories_list = site.categories %}
+
+            {% assign categories_list = site.categories | sort %}           
             {% if categories_list.first[0] == null %}
                 {% for category in categories_list %}
-                    <a class="mt-1 mb-1" href="{{site.baseurl}}/categories#{{ category | url_escape | strip | replace: ' ', '-' }}">{{ category | camelcase }} ({{ site.tags[category].size }})</a>
+                    <a class="mt-1 mb-1" href="{{site.baseurl}}/category/{{ category | url_escape | strip | slugify }}">{{ category | camelcase }} ({{ site.tags[category].size }})</a>
                 {% endfor %}
             {% else %}
                 {% for category in categories_list %}
-                    <a class="mt-1 mb-1" href="{{site.baseurl}}/categories#{{ category[0] | url_escape | strip | replace: ' ', '-' }}">{{ category[0] | camelcase }} ({{ category[1].size }})</a>
+                    <a class="mt-1 mb-1" href="{{site.baseurl}}/category/{{ category[0] | url_escape | strip |  slugify }}">{{ category[0] | camelcase }} ({{ category[1].size }})</a>
                 {% endfor %}
             {% endif %}
             {% assign categories_list = nil %}
